--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@main
 
-      - name: Cache node nodules
+      - name: Cache node modules
         uses: actions/cache@v3
         with:
           path: node_modules
