--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
         run: |
           aws s3 cp \
             --recursive \
-            --region ap-northeast-2
+            --region ap-northeast-2 \
             dist s3://parkseeun-bucket
